minor changes on settings
