# controller/api.php
@@ -1,9 +1,9 @@
 <?php
  /**
  * @SWG\Info(
- *     description="This is a sample php api for Erply assignment",
- *     version="1.0.0",
- *     title="PHP SAMPLE API",
+ *     description="Api for CookPaz mobile and web app",
+ *     version="1.0",
+ *     title="CookPaz API",
  *     @SWG\Contact(
  *         email="arashtajdar@gmail.com"
  *     )
@@ -11,35 +11,48 @@
  */
 /**
  * @SWG\Tag(
- *     name="products",
- *     description="Acces to products list and do CRUD",
+ *     name="category",
+ *     description="CRUD for category",
+ * )
+ * @SWG\Tag(
+ *     name="food",
+ *     description="CRUD for food",
+ * )
+ * @SWG\Tag(
+ *     name="recipe",
+ *     description="CRUD for recipe",
+ * )
+ * @SWG\Tag(
+ *     name="step",
+ *     description="CRUD for step",
  * )
 
 
  */
-header("Content-Type: application/json; charset=UTF-8");
-$api = array();
-$api["body"] = array();
-$api["services"] = array();
-$api["documentation"] = array();
+ function createIndex(){
+   $api = array();
+   $api["body"] = array();
+   $api["services"] = array();
+   $api["documentation"] = array();
 
-$api["body"] = array(
-    "TITLE" => "CookPaz",
-    "VERSION" => "1.0.0",
-    "DESCRIPTION" => "...",
-    "CONTACTME" => "arashtajdar@gmail.com"
-);
+   $api["body"] = array(
+       "TITLE" => "CookPaz",
+       "VERSION" => "1.0.0",
+       "DESCRIPTION" => "...",
+       "CONTACTME" => "arashtajdar@gmail.com"
+   );
 
-$api["services"] = array(
-    "CREATE" => "/samplePhpApi/products/create.php",
-    "DELETE" => "/samplePhpApi/products/delete.php",
-    "READ" => "/samplePhpApi/products/read.php",
-    "SEARCH" => "/samplePhpApi/products/search.php",
-    "UPDATE" => "/samplePhpApi/products/update.php"
-);
-$api["documentation"] = array(
-    "URL" => "/documentation"
-);
+   $api["services"] = array(
+       "CREATE" => "/samplePhpApi/products/create.php",
+       "DELETE" => "/samplePhpApi/products/delete.php",
+       "READ" => "/samplePhpApi/products/read.php",
+       "SEARCH" => "/samplePhpApi/products/search.php",
+       "UPDATE" => "/samplePhpApi/products/update.php"
+   );
+   $api["documentation"] = array(
+       "URL" => "/documentation"
+   );
 
 
-echo json_encode($api);
+   return json_encode($api);
+ }
